# rec

./: .dockerignore  .gitignore  Dockerfile  README.md  TODOs.md  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: test.yml
config/: example_advanced.yaml
config/dummy/: dummy_small.yaml
config/movielens/: movielens_1m.yaml  movielens_1m_large.yaml  movielens_1m_small.yaml
docs/: TRAINING.md
rec/: TRAINING.md  __init__.py  deploy_api.py  train.py  train_all.py  wandb_promote.py
rec/api/: app.py  assets.py  config.py  service.py  vector_store.py
rec/common/: __init__.py  cli.py  config.py  data.py  io.py  metrics.py  model.py  train.py  train_utils.py  utils.py
rec/data_prep/: __init__.py  dummy.py  movielens.py  utils.py
rec/ranking/: __init__.py  data.py  metrics.py  model.py  train.py
rec/retrieval/: __init__.py  data.py  metrics.py  model.py  train.py
scripts/: movielens_large_full_run.sh  movielens_small_full_run.sh  view_benchmarks.py
tests/: README.md  __init__.py  conftest.py  test_benchmarks.py  test_data.py  test_models.py
